--- a/landingstyle.css
+++ b/landingstyle.css
@@ -1,9 +1,11 @@
-
+body{
+    font-family: Arial, sans-serif, ;
+}
 
 /*header part*/
 
 .header {
-    background-color: rgb(32, 45, 61);
+    background-color: #1F2937;
     padding: 10px 13%;
     color: white;
 }
@@ -75,6 +77,6 @@
     display: flex;
     justify-content: center;
     color: white;
-    background-color: rgb(32, 45, 61);
+    background-color: #1F2937;
 }
 
